--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id 'maven-publish'
     id 'jacoco'
 }
-version = "1.0.0"
-group = "{{package}}"
+version = "0.1.0"
+group = "com.niton"
 def pomDescription = "";
 
 dependencies {
@@ -15,6 +15,10 @@ dependencies {
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     api "com.typesafe:config:1.4.0"
+    implementation "com.niton:util:0.1.0"
+    api 'com.niton:login-secure:0.1.0'
+    implementation 'org.jasypt:jasypt:1.9.3'
+
 }
 java {
     sourceCompatibility JavaVersion.VERSION_1_8
@@ -49,7 +53,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/{{repo}}")
+            url = uri("https://maven.pkg.github.com/nbrugger-tgm/JAuth")
             credentials {
                 username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                 password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
