--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'maven-publish'
     id 'jacoco'
 }
-version = "0.1.1"
+version = "0.1.2"
 group = "com.niton"
 def pomDescription = "";
 
@@ -15,7 +15,7 @@ dependencies {
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     api "com.typesafe:config:1.4.0"
-    implementation "com.niton:util:0.1.1"
+    implementation "com.niton:util:0.1.+"
     api 'com.niton:login-secure:0.1.0'
     implementation 'org.jasypt:jasypt:1.9.3'
 
